<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:id="@+id/question_text_view"/>

    <LinearLayout   android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:orientation="horizontal">

        <Button     android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/true_button_label"
                    android:id="@+id/true_button" />

        <Button     android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/false_button_label"
                    android:id="@+id/false_button" />

    </LinearLayout>
    <LinearLayout   android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:orientation="vertical" android:gravity="bottom|center">

        <Button android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/launch_cheat_activity_button_label"/>

        <LinearLayout   android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

            <ImageButton     android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/previous_button"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/previous_button_label"/>

            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/next_button"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/next_button_label"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
